<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F2F2F2">

    <TextView android:text="@string/text_login"
        android:layout_width="match_parent"
        android:paddingTop="12sp"
        android:paddingBottom="12sp" android:paddingLeft="30px"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:background="@drawable/rounded_corner" android:id="@+id/textView"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:layout_marginTop="115dp"
        android:background="@drawable/rounded_corner_edittext"
        android:height="50sp"
        android:width="300sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30px"
        android:id="@+id/editTextUsername"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:background="@drawable/rounded_corner_edittext"
        android:height="50sp"
        android:width="300sp"
        android:layout_centerVertical="true"
        android:paddingLeft="30px"
        android:layout_alignStart="@+id/editTextUsername"
        android:id="@+id/editTextPassword"/>

    <Button
        android:layout_width="130sp"
        android:layout_height="32sp"
        android:id="@+id/btnLogin"
        android:text="@string/text_login"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:width="120sp"
        android:textColor="#ffffff"
        android:background="@drawable/rounded_corner"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up"
        android:layout_below="@+id/btnLogin"
        android:layout_alignEnd="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:id="@+id/textViewSignup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@+id/textViewSignup"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_marginTop="21dp"
        android:id="@+id/textViewForgotpassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_msg"
        android:layout_marginTop="19dp"
        android:id="@+id/textViewError"
        android:layout_below="@+id/textViewForgotpassword"
        android:layout_alignStart="@+id/textViewForgotpassword"
        android:textColor="#d8184b"
        android:visibility="invisible"/>

</RelativeLayout>
